appId: com.fastpay.agent
tags:
  - regression
  - smoke
  - p1
---
- runFlow: ../../flows/login_helper.yaml

- tapOn: Sell Balance
- tapOn: Mobile Number
- inputText: ${Customer}
- pressKey: back
- doubleTapOn: "0"
- inputText: "260"
- pressKey: back
- tapOn: CONFIRM
- tapOn: PROCEED

- assertVisible:
    id: editTextPin1

- tapOn:
    id: "editTextPin1"
- inputText: "1"
- tapOn:
    id: "editTextPin2"
- inputText: "2"
- tapOn:
    id: "editTextPin3"
- inputText: "3"
- tapOn:
    id: "editTextPin4"
- inputText: "4"

- waitForAnimationToEnd
- tapOn: VIEW INVOICE

- assertVisible:
    id: "nav_host_dashboard"

- runFlow: ../../flows/teardown_helper.yaml
